виправив cхов. загол. + список контактів

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </section>
 
       <section>
-        <!--<h2>Особенности</h2>-->
+        <h2 hidden >Особенности</h2>
         <ul class="features list">
           <li>
             <h3 class="features-title ">внимание к деталям</h3>
@@ -115,12 +115,13 @@
       </section>
     </main>
     <footer class="bottom-section">
-      <a class="logo" href="/">Web<span class="white-logo">Studio</span></a>
-      <address class="text-address">
-       г.Киев пр-т Леси Украинки, 26 <br>
-       <span class="text-contacts"> @example.com </span><br>
-       <span class="text-contacts">+380991111111</span>
-      </address>
+      <a class="logo" href="/">Web<span class="white-logo">Studio</span>
+      </a>
+      <ul class="list text-address">
+        <li><p>г.Киев пр-т Леси Украинки, 26 </p></li>
+       <li class="text-contacts"> @example.com </li>
+       <li class="text-contacts">+380991111111</li>
+      </ul>
     </footer>
   </body>
 </html>
