додав cхов. загол. + список контактів

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
 </header>
     <main>
         <section>
+            <h2 hidden>Проекты</h2>
         <ul class="list">
             <li>
                 <button type="button" class="filter">Все</button>
@@ -115,11 +116,13 @@
     </main>
         <footer class="bottom-section">
             <a class="logo" href="/">Web<span class="white-logo">Studio</span></a>
-            <address class="text-address">
-                г.Киев пр-т Леси Украинки, 26 <br>
-                <span class="text-contacts"> @example.com </span><br>
-        <span class="text-contacts">+380991111111</span>
-            </address>
+            <ul class="list text-address">
+                <li>
+                    <p>г.Киев пр-т Леси Украинки, 26 </p>
+                </li>
+                <li class="text-contacts"> @example.com </li>
+                <li class="text-contacts">+380991111111</li>
+            </ul>
         </footer>
     </body>
     
