--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
       <a class="logo" href="/">Web<span class="black-logo">Studio</span></a>
       <nav>
         <ul class="list">
-          <li><a class="n-link current" href="">Студия</a></li>
-          <li><a class="n-link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="n-link" href="">Контакты</a></li>
+          <li><a class="nav link current" href="">Студия</a></li>
+          <li><a class="nav link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="list">
-        <li><a class="n-link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="n-link contacts" href="tel:+380961111111">+380961111111</a></li>
+        <li><a class="nav link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav link contacts" href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
@@ -71,7 +71,7 @@
       </section>
 
       <section>
-        <h2 class="h-title">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="list">
           <li>
             <img src="./images/box1.jpg" alt="процесс верстки сайта" width="370" />
@@ -88,28 +88,36 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="h-title">Наша команда</h2>
-        <ul class="team list">
+      <section class="team-section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
+            <a href="" class="team link">
             <img src="./images/card1.jpg" alt="Игорь Демьяненко Product Designer" width="270" />
-             <h3 class="t-title">Игорь Демьяненко</h3>
+             <h3 class="team-title">Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
+                </a>
           </li>
           <li>
+            <a href="" class="team link">
            <img src="images/card2.jpg" alt="Ольга Репина Frontend Developer" width="270" />
-             <h3 class="t-title">Ольга Репина</h3>
+             <h3 class="team-title">Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
+                </a>
             </li>
           <li>
+            <a href="" class="team link">
            <img src="./images/card3.jpg" alt="Николай Тарасов Marketing " width="270" />
-               <h3 class="t-title">Николай Тарасов</h3>
+               <h3 class="team-title">Николай Тарасов</h3>
                 <p lang="en">Marketing</p>
+                </a>
           </li>
           <li>
+            <a href="" class="team link">
               <img src="./images/card4.jpg" alt="Михаил Ермаков UI Designer" width="270" />
-                 <h3 class="t-title">Михаил Ермаков</h3>
+                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
+                </a>
           </li>
         </ul>
       </section>
@@ -117,10 +125,10 @@
     <footer class="bottom-section">
       <a class="logo" href="/">Web<span class="white-logo">Studio</span>
       </a>
-      <ul class="list text-address">
+      <ul class="list address">
         <li><p>г.Киев пр-т Леси Украинки, 26 </p></li>
-       <li class="text-contacts"> @example.com </li>
-       <li class="text-contacts">+380991111111</li>
+       <li class="address-contacts"> @example.com </li>
+       <li class="address-contacts">+380991111111</li>
       </ul>
     </footer>
   </body>
