--- a/portfolio.html
+++ b/portfolio.html
@@ -18,14 +18,14 @@
     <a class="logo" href="/">Web<span class="black-logo">Studio</span></a>
     <nav>
         <ul class="list">
-            <li><a class="n-link " href="./index.html">Студия</a></li>
-            <li><a class="n-link current" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="n-link" href="">Контакты</a></li>
+            <li><a class="nav link" href="./index.html">Студия</a></li>
+            <li><a class="nav link current" href="">Портфолио</a></li>
+            <li><a class="nav link" href="">Контакты</a></li>
         </ul>
     </nav>
     <ul class="list">
-        <li><a class="n-link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="n-link contacts" href="tel:+380961111111">+380961111111</a></li>
+        <li><a class="nav link contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="nav link contacts" href="tel:+380961111111">+380961111111</a></li>
     </ul>
 </header>
     <main>
@@ -33,7 +33,7 @@
             <h2 hidden>Проекты</h2>
         <ul class="list">
             <li>
-                <button type="button" class="filter">Все</button>
+                <button type="button" class="filter current2">Все</button>
             </li>
             <li>
                 <button type="button" class="filter">Вебсайты</button>
@@ -52,62 +52,62 @@
     
             <ul class="list">
                 <li>
-                    <a href="" class="project"><img src="./images/proj1.jpg" alt="фото сотрудников на экране макбука" width="370"/>
-                    <h2 class="p-title">Технокряк</h2>
+                    <a href="" class="project link"><img src="./images/proj1.jpg" alt="фото сотрудников на экране макбука" width="370"/>
+                    <h2 class="project-title">Технокряк</h2>
                     <p>Вебсайт</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj2.jpg" alt="игра в баскетболл" width="370"/>
-                    <h2 class="p-title">Постер <span lang="en">New Orlean vs Golden Star</span>
+                    <a href="" class="project link"><img src="./images/proj2.jpg" alt="игра в баскетболл" width="370"/>
+                    <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span>
                     </h2>
                     <p>Дизайн</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj3.jpg" alt="логотип рыбного ресторана" width="370"/>
-                   <h2 class="p-title">Ресторан <span lang="en">Seafood</span>
+                    <a href="" class="project link"><img src="./images/proj3.jpg" alt="логотип рыбного ресторана" width="370"/>
+                   <h2 class="project-title">Ресторан <span lang="en">Seafood</span>
                 </h2>
                     <p>Приложение</p>
             </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj4.jpg" alt="безпроводные наушники" width="370"/>
-                    <h2 class="p-title">Проект <span lang="en">Prime</span>
+                    <a href="" class="project link"><img src="./images/proj4.jpg" alt="безпроводные наушники" width="370"/>
+                    <h2 class="project-title">Проект <span lang="en">Prime</span>
                     </h2>
                     <p>Маркетинг</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj5.jpg" alt="две коробки" width="370"/>
-                    <h2 class="p-title">Проект <span lang="en">Boxes</span>
+                    <a href="" class="project link"><img src="./images/proj5.jpg" alt="две коробки" width="370"/>
+                    <h2 class="project-title">Проект <span lang="en">Boxes</span>
                     </h2>
                     <p>Приложение</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj6.jpg" alt="монитор" width="370"/>
-                    <h2 lang="en" class="p-title">Inspiration has no Borders</h2>
+                    <a href="" class="project link"><img src="./images/proj6.jpg" alt="монитор" width="370"/>
+                    <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
                     <p>Вебсайт</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj7.jpg" alt="открытый журнал" width="370"/>
-                    <h2 class="p-title">Издание<span lang="en">Limited Edition</span>
+                    <a href="" class="project link"><img src="./images/proj7.jpg" alt="открытый журнал" width="370"/>
+                    <h2 class="project-title">Издание<span lang="en">Limited Edition</span>
                     </h2>
                     <p>Дизайн</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj8.jpg" alt="этикетка с логотипом" width="370"/>
-                    <h2 class="p-title">Проект <span lang="en">LAB</span>
+                    <a href="" class="project link"><img src="./images/proj8.jpg" alt="этикетка с логотипом" width="370"/>
+                    <h2 class="project-title">Проект <span lang="en">LAB</span>
                     </h2>
                     <p>Маркетинг</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project"><img src="./images/proj9.jpg" alt="руки на клавиатуре лэптопа" width="370"/>
-                    <h2 lang="en" class="p-title">Growing Business</h2>
+                    <a href="" class="project link"><img src="./images/proj9.jpg" alt="руки на клавиатуре лэптопа" width="370"/>
+                    <h2 lang="en" class="project-title">Growing Business</h2>
                     <p>Приложение</p>
                 </a>
                 </li>
@@ -115,13 +115,14 @@
         </section>
     </main>
         <footer class="bottom-section">
-            <a class="logo" href="/">Web<span class="white-logo">Studio</span></a>
-            <ul class="list text-address">
+            <a class="logo" href="/">Web<span class="white-logo">Studio</span>
+            </a>
+            <ul class="list address">
                 <li>
                     <p>г.Киев пр-т Леси Украинки, 26 </p>
                 </li>
-                <li class="text-contacts"> @example.com </li>
-                <li class="text-contacts">+380991111111</li>
+                <li class="address-contacts"> @example.com </li>
+                <li class="address-contacts">+380991111111</li>
             </ul>
         </footer>
     </body>
