--- a/portfolio.html
+++ b/portfolio.html
@@ -52,61 +52,61 @@
     
             <ul class="list">
                 <li>
-                    <a href="" class="project link"><img src="./images/proj1.jpg" alt="фото сотрудников на экране макбука" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj1.jpg" alt="фото сотрудников на экране макбука" width="370"/>
                     <h2 class="project-title">Технокряк</h2>
                     <p>Вебсайт</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj2.jpg" alt="игра в баскетболл" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj2.jpg" alt="игра в баскетболл" width="370"/>
                     <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span>
                     </h2>
                     <p>Дизайн</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj3.jpg" alt="логотип рыбного ресторана" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj3.jpg" alt="логотип рыбного ресторана" width="370"/>
                    <h2 class="project-title">Ресторан <span lang="en">Seafood</span>
                 </h2>
                     <p>Приложение</p>
             </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj4.jpg" alt="безпроводные наушники" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj4.jpg" alt="безпроводные наушники" width="370"/>
                     <h2 class="project-title">Проект <span lang="en">Prime</span>
                     </h2>
                     <p>Маркетинг</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj5.jpg" alt="две коробки" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj5.jpg" alt="две коробки" width="370"/>
                     <h2 class="project-title">Проект <span lang="en">Boxes</span>
                     </h2>
                     <p>Приложение</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj6.jpg" alt="монитор" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj6.jpg" alt="монитор" width="370"/>
                     <h2 lang="en" class="project-title">Inspiration has no Borders</h2>
                     <p>Вебсайт</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj7.jpg" alt="открытый журнал" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj7.jpg" alt="открытый журнал" width="370"/>
                     <h2 class="project-title">Издание<span lang="en">Limited Edition</span>
                     </h2>
                     <p>Дизайн</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj8.jpg" alt="этикетка с логотипом" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj8.jpg" alt="этикетка с логотипом" width="370"/>
                     <h2 class="project-title">Проект <span lang="en">LAB</span>
                     </h2>
                     <p>Маркетинг</p>
                 </a>
                 </li>
                 <li>
-                    <a href="" class="project link"><img src="./images/proj9.jpg" alt="руки на клавиатуре лэптопа" width="370"/>
+                    <a href="" class="project-link"><img src="./images/proj9.jpg" alt="руки на клавиатуре лэптопа" width="370"/>
                     <h2 lang="en" class="project-title">Growing Business</h2>
                     <p>Приложение</p>
                 </a>
@@ -121,8 +121,8 @@
                 <li>
                     <p>г.Киев пр-т Леси Украинки, 26 </p>
                 </li>
-                <li class="address-contacts"> @example.com </li>
-                <li class="address-contacts">+380991111111</li>
+                <li><a class="address-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-contacts link" href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </footer>
     </body>
