корекція списку контактів та адреси

--- a/index.html
+++ b/index.html
@@ -122,11 +122,13 @@
     <footer class="bottom-section">
       <a class="logo" href="/">Web<span class="white-logo">Studio</span>
       </a>
+      <address>
       <ul class="list address">
         <li><p>г.Киев пр-т Леси Украинки, 26 </p></li>
     <li><a class="address-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
     <li><a class="address-contacts link" href="tel:+380961111111">+380961111111</a></li>
       </ul>
+      </address>
     </footer>
   </body>
 </html>
