--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </a>
       <address>
       <ul class="list address">
-        <li><p>г.Киев пр-т Леси Украинки, 26 </p></li>
+        <li><a class="link address" href=""> г.Киев пр-т Леси Украинки, 26</a></li>
     <li><a class="address-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
     <li><a class="address-contacts link" href="tel:+380961111111">+380961111111</a></li>
       </ul>
