--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
             <address>
             <ul class="list address">
                 <li>
-                    <p>г.Киев пр-т Леси Украинки, 26 </p>
+                <a class="link address" href=""> г.Киев пр-т Леси Украинки, 26</a>
                 </li>
                 <li><a class="address-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="address-contacts link" href="tel:+380961111111">+380961111111</a></li>
